tests/fail/fail6.sps
(import (yuni scheme))

(error "Some error" "with arguments")
